<resources>
    <string name="app_name">MovieApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_title">Movie Title</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release Date</string>
    <string name="popularity">Popularity</string>
    <string name="popularity_value">Popularity Value</string>
    <string name="vote_average">Vote Average</string>
    <string name="vote_count">Vote Count</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="popular">Popular</string>
    <string name="discover">Discover</string>
    <string name="top_rate">Top Rate</string>
    <string name="up_coming">Up Coming</string>
</resources>